DishBean correccion